--- a/src/app/commonComponent/header/header.component.html
+++ b/src/app/commonComponent/header/header.component.html
@@ -1,43 +1,75 @@
 <div class="top-header">
-    <!-- <div class="header-top-contain"></div> -->
-    <header class="header bg-white">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
-                <a class="navbar-brand p-0" href="#"><img src="assets/images/logo.png" width="100%" height="100%" /></a>
-                <div class="navbar-toggler border-0 p-0">
-                    <img src="assets/images/search.png" alt="image" width="30px" height="30px" />
-                    <button class="border-0 p-0 ms-4" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <img src="assets/images/menu.png" alt="image" width="35px" height="20px" />
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav header_menu-list me-auto mb-2 mb-lg-0">
-                        <li class="nav-item pe-4">
-                            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-                        </li>
-                        <li class="nav-item pe-4">
-                            <a class="nav-link" href="/about">About Us</a>
-                        </li>
-                        <li class="nav-item pe-4">
-                            <a class="nav-link" href="/products">Products</a>
-                        </li>
-                        <li class="nav-item pe-4">
-                            <a class="nav-link" href="/shop">Shop</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
-                        </li>
-                    </ul>
-                    <form class="d-lg-flex d-none align-items-center justify-content-center">
-                        <img src="assets/images/search.png" alt="image" width="30px" height="30px" />
-                        <div class="menu-icon">
-                            <img src="assets/images/menu.png" alt="image" width="80px" height="20px" />
-                        </div>
-                    </form>
-                </div>
+  <!-- <div class="header-top-contain"></div> -->
+  <header class="header bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <div class="container-fluid">
+        <a class="navbar-brand p-0" href="#"
+          ><img src="assets/images/logo.png" width="100%" height="100%"
+        /></a>
+        <div class="navbar-toggler border-0 p-0">
+          <img
+            src="assets/images/search.png"
+            alt="image"
+            width="30px"
+            height="30px"
+          />
+          <button
+            class="border-0 p-0 ms-4"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <img
+              src="assets/images/menu.png"
+              alt="image"
+              width="35px"
+              height="20px"
+            />
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav header_menu-list me-auto mb-2 mb-lg-0">
+            <li class="nav-item pe-4">
+              <a class="nav-link active" aria-current="page" href="/home"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item pe-4">
+              <a class="nav-link" href="/about">About Us</a>
+            </li>
+            <li class="nav-item pe-4">
+              <a class="nav-link" href="/products">Products</a>
+            </li>
+            <li class="nav-item pe-4">
+              <a class="nav-link" href="/shop">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact-us">Contact Us</a>
+            </li>
+          </ul>
+          <form
+            class="d-lg-flex d-none align-items-center justify-content-center"
+          >
+            <img
+              src="assets/images/search.png"
+              alt="image"
+              width="30px"
+              height="30px"
+            />
+            <div class="menu-icon">
+              <img
+                src="assets/images/menu.png"
+                alt="image"
+                width="80px"
+                height="20px"
+              />
             </div>
-        </nav>
-    </header>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
 </div>
