--- a/src/app/commonComponent/instagram/instagram.component.html
+++ b/src/app/commonComponent/instagram/instagram.component.html
@@ -1,11 +1,23 @@
-<section class="instagram" [ngClass]="{'home-instagram': className == 'home', 'about-instagram':className == 'about'}">
-    <div class="" >
-        <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig"
-            (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
-            (beforeChange)="beforeChange($event)">
-            <div ngxSlickItem *ngFor="let slide of slides" class="slide">
-                <img src="{{ slide.img }}" alt="" width="100%">
-            </div>
-        </ngx-slick-carousel>
-    </div>
+<section
+  class="instagram"
+  [ngClass]="{
+    'home-instagram': className == 'home',
+    'about-instagram': className == 'about'
+  }"
+>
+  <div class="">
+    <ngx-slick-carousel
+      class="carousel"
+      #slickModal
+      [config]="slideConfig"
+      (init)="slickInit($event)"
+      (breakpoint)="breakpoint($event)"
+      (afterChange)="afterChange($event)"
+      (beforeChange)="beforeChange($event)"
+    >
+      <div ngxSlickItem *ngFor="let slide of slides" class="slide">
+        <img [src]="slide.img" [alt]="'Image ' + slide.img" width="100%" />
+      </div>
+    </ngx-slick-carousel>
+  </div>
 </section>
